--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run universal:serve-ssr",
+    "serve:ssr": "node dist/universal/server/main.js",
+    "build:ssr": "ng build --prod && ng run universal:server:production",
+    "prerender": "ng run universal:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +22,12 @@
     "@angular/forms": "~10.0.4",
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
+    "@angular/platform-server": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "@nguniversal/express-engine": "^10.0.2",
+    "domino": "^2.1.6",
+    "express": "^4.15.2",
+    "localstorage-polyfill": "^1.0.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -27,6 +36,8 @@
     "@angular-devkit/build-angular": "~0.1000.3",
     "@angular/cli": "~10.0.3",
     "@angular/compiler-cli": "~10.0.4",
+    "@nguniversal/builders": "^10.0.2",
+    "@types/express": "^4.17.0",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
